<?xml version="1.0"?>
<package>
  <name>baxter_tweet_face</name>
  <version>0.1.0</version>
  <description>Tweet to push images to baxter's face!</description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/osrf/baxter_tweet_face</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>twitter</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>twitter</run_depend>

</package>